# FoxEye-3D_scan_to_VR

./: README.md  build.sh
point_cloud_to_mesh/: .gitignore  package.json  run.sh
record_pcd/: README.md  init_env.sh  record_pcd_ros.sh  start_camera.sh  test_camera.sh
texture_mapping/: .gitignore  CMakeLists.txt  test.sh  texture_mapping.cpp
transfer_vertex_color/: .gitignore  CMakeLists.txt  transfer_vertex_color.cpp
transfer_vertex_color/test/: learn1_downsample.pcd  learn1_downsample_normal_poisson.vtk  test.sh
